--- a/qtfuzzylite/CMakeLists.txt
+++ b/qtfuzzylite/CMakeLists.txt
@@ -5,7 +5,7 @@ cmake_minimum_required(VERSION 2.8)
 # In Mac:
 # otool -L qtfuzzylite #gives the dependencies of qtfuzzylite
 # install_name_tool -change /Users/jcrada/Development/fl/fuzzylite/fuzzylite/bin/libfuzzylite.dylib @executable_path/../Frameworks/libfuzzylite.dylib qtfuzzylite.app/Contents/MacOS/qtfuzzylite
-
+# set(LIBRARY_OUTPUT_PATH bin) TODO: Could this fix linkage in mac?
 project(qtfuzzylite CXX)
 
 set(CMAKE_VERBOSE_MAKEFILE true)
