Improved memory management with std::auto_ptr

--- a/fuzzylite/CMakeLists.txt
+++ b/fuzzylite/CMakeLists.txt
@@ -61,7 +61,7 @@ set(FL_LIBS)
 
 
 if(UNIX)
-    set(CMAKE_CXX_FLAGS "-Werror -Wall -Wextra")
+    set(CMAKE_CXX_FLAGS "-pedantic -Werror -Wall -Wextra")
     set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
     set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
     #set(CMAKE_SHARED_LINKER_FLAGS "-Wl,-rpath,bin/") #does apple recognise these?
