Exception handling for Conjunction, Disjunction, Activation, and Accumulation operators, and Defuzzifier, instead of signals. Smart pointers in FactoryManager and Rules. Default AlgebraicProduct in WeightedDefuzzifiers when no Activation operator is set.

--- a/fuzzylite/CMakeLists.txt
+++ b/fuzzylite/CMakeLists.txt
@@ -75,10 +75,10 @@ if(NOT APPLE)
 endif()
 
 elseif(WIN32)
-    set(CMAKE_CXX_FLAGS "/WX /W4 /EHsc")
+    set(CMAKE_CXX_FLAGS "/WX /W4")
 	#Wx: Treat warnings as errors. W4: All warnings
 	#http://msdn.microsoft.com/en-us/library/thxezb7y.aspx
-	#EHsc: to ignore C4530: C++ exception handler used, but unwind semantics are not enabled
+	#EHsc: call destructors on __try __catch, and to ignore C4530: C++ exception handler used. Note, unwind semantics are not enabled
     set(FL_LIBS dbghelp)
 endif()
 
