--- a/fuzzylite/CMakeLists.txt
+++ b/fuzzylite/CMakeLists.txt
@@ -75,7 +75,7 @@ if(NOT APPLE)
 endif()
 
 elseif(WIN32)
-    set(CMAKE_CXX_FLAGS "/WX /W4")
+    set(CMAKE_CXX_FLAGS "/WX /W4 /EHsc")
 	#Wx: Treat warnings as errors. W4: All warnings
 	#http://msdn.microsoft.com/en-us/library/thxezb7y.aspx
 	#EHsc: call destructors on __try __catch, and to ignore C4530: C++ exception handler used. Note, unwind semantics are not enabled
