Xcode project improved. Fixed compilation error for C++11 in Mac

--- a/fuzzylite/CMakeLists.txt
+++ b/fuzzylite/CMakeLists.txt
@@ -89,6 +89,7 @@ endif()
 
 include_directories(.)
 cmake_policy(SET CMP0015 OLD)
+cmake_policy(SET CMP0042 NEW)
 link_directories(.)
 
 file(STRINGS FL_HEADERS fl-headers)
@@ -105,34 +106,45 @@ set(CMAKE_DEBUG_POSTFIX d)
 if (WIN32)
 add_library(fl-shared SHARED ${fl-headers} ${fl-sources})
 set_target_properties(fl-shared PROPERTIES OUTPUT_NAME fuzzylite)
-set_target_properties(fl-shared PROPERTIES DEBUG_POSTFIX d)
 set_target_properties(fl-shared PROPERTIES COMPILE_DEFINITIONS "FL_EXPORT_LIBRARY")
+set_target_properties(fl-shared PROPERTIES VERSION 5.0)
 target_link_libraries(fl-shared ${FL_LIBS})
 
 add_library(fl-static STATIC ${fl-headers} ${fl-sources})
 set_target_properties(fl-static PROPERTIES OUTPUT_NAME fuzzylite-static)
-set_target_properties(fl-static PROPERTIES DEBUG_POSTFIX d)
+set_target_properties(fl-static PROPERTIES VERSION 5.0)
 target_link_libraries(fl-static ${FL_LIBS})
+endif()
 
-else()
+if(UNIX)
+	if(CMAKE_GENERATOR STREQUAL Xcode) #Xcode has issues building fuzzylite when using fl-obj
+		add_library(fl-shared SHARED ${fl-headers} ${fl-sources})
+		set_target_properties(fl-shared PROPERTIES OUTPUT_NAME fuzzylite)
+		set_target_properties(fl-shared PROPERTIES COMPILE_DEFINITIONS "FL_EXPORT_LIBRARY")
+		set_target_properties(fl-shared PROPERTIES VERSION 5.0 SOVERSION 5)
+		target_link_libraries(fl-shared ${FL_LIBS})
 
-add_library(fl-obj OBJECT ${fl-headers} ${fl-sources})
-set_target_properties(fl-obj PROPERTIES COMPILE_FLAGS "-fPIC")
+		add_library(fl-static STATIC ${fl-headers} ${fl-sources})
+		set_target_properties(fl-static PROPERTIES OUTPUT_NAME fuzzylite-static)
+		set_target_properties(fl-static PROPERTIES VERSION 5.0 SOVERSION 5)
+		target_link_libraries(fl-static ${FL_LIBS})
+	else()
+		add_library(fl-obj OBJECT ${fl-headers} ${fl-sources})
+		set_target_properties(fl-obj PROPERTIES COMPILE_FLAGS "-fPIC")
 
-add_library(fl-shared SHARED $<TARGET_OBJECTS:fl-obj>)
-set_target_properties(fl-shared PROPERTIES OUTPUT_NAME fuzzylite)
-set_target_properties(fl-shared PROPERTIES DEBUG_POSTFIX d)
-set_target_properties(fl-shared PROPERTIES COMPILE_DEFINITIONS "FL_EXPORT_LIBRARY")
-set_target_properties(fl-shared PROPERTIES SOVERSION 5.0)
-target_link_libraries(fl-shared ${FL_LIBS})
+		add_library(fl-shared SHARED $<TARGET_OBJECTS:fl-obj>)
+		set_target_properties(fl-shared PROPERTIES OUTPUT_NAME fuzzylite)
+		set_target_properties(fl-shared PROPERTIES DEBUG_POSTFIX d)
+		set_target_properties(fl-shared PROPERTIES COMPILE_DEFINITIONS "FL_EXPORT_LIBRARY")
+		set_target_properties(fl-shared PROPERTIES VERSION 5.0 SOVERSION 5)
+		target_link_libraries(fl-shared ${FL_LIBS})
 
-
-add_library(fl-static STATIC $<TARGET_OBJECTS:fl-obj>)
-set_target_properties(fl-static PROPERTIES OUTPUT_NAME fuzzylite-static)
-set_target_properties(fl-static PROPERTIES DEBUG_POSTFIX d)
-set_target_properties(fl-static PROPERTIES SOVERSION 5.0)
-target_link_libraries(fl-static ${FL_LIBS})
-
+		add_library(fl-static STATIC $<TARGET_OBJECTS:fl-obj>)
+		set_target_properties(fl-static PROPERTIES OUTPUT_NAME fuzzylite-static)
+		set_target_properties(fl-static PROPERTIES DEBUG_POSTFIX d)
+		set_target_properties(fl-static PROPERTIES VERSION 5.0 SOVERSION 5)
+		target_link_libraries(fl-static ${FL_LIBS})
+	endif()
 endif()
 
 add_executable(fl-bin src/main.cpp)
@@ -140,12 +152,12 @@ set_target_properties(fl-bin PROPERTIES OUTPUT_NAME fuzzylite)
 set_target_properties(fl-bin PROPERTIES OUTPUT_NAME fuzzylite IMPORT_PREFIX tmp-) #To prevent LNK1149 in Windows
 set_target_properties(fl-bin PROPERTIES DEBUG_POSTFIX d)
 
-if (WIN32)
-    target_link_libraries(fl-bin fl-static ${FL_LIBS})
-else()
+#if (WIN32) #TODO:Check executable in Windows with dynamic library
+#    target_link_libraries(fl-bin fl-static ${FL_LIBS})
+#else()
     set_target_properties(fl-bin PROPERTIES COMPILE_DEFINITIONS "FL_IMPORT_LIBRARY")
     target_link_libraries(fl-bin fl-shared ${FL_LIBS})
-endif()
+#endif()
 
 if(NOT CMAKE_INSTALL_LIBDIR)
     set(CMAKE_INSTALL_LIBDIR lib)
