--- a/fuzzylite/CMakeLists.txt
+++ b/fuzzylite/CMakeLists.txt
@@ -89,7 +89,9 @@ endif()
 
 include_directories(.)
 cmake_policy(SET CMP0015 OLD)
+if (APPLE)
 cmake_policy(SET CMP0042 NEW)
+endif()
 link_directories(.)
 
 file(STRINGS FL_HEADERS fl-headers)
@@ -117,34 +119,34 @@ target_link_libraries(fl-static ${FL_LIBS})
 endif()
 
 if(UNIX)
-	if(CMAKE_GENERATOR STREQUAL Xcode) #Xcode has issues building fuzzylite when using fl-obj
-		add_library(fl-shared SHARED ${fl-headers} ${fl-sources})
-		set_target_properties(fl-shared PROPERTIES OUTPUT_NAME fuzzylite)
-		set_target_properties(fl-shared PROPERTIES COMPILE_DEFINITIONS "FL_EXPORT_LIBRARY")
-		set_target_properties(fl-shared PROPERTIES VERSION 5.0 SOVERSION 5)
-		target_link_libraries(fl-shared ${FL_LIBS})
+    if(CMAKE_GENERATOR STREQUAL Xcode) #Xcode has issues building fuzzylite when using fl-obj
+        add_library(fl-shared SHARED ${fl-headers} ${fl-sources})
+        set_target_properties(fl-shared PROPERTIES OUTPUT_NAME fuzzylite)
+        set_target_properties(fl-shared PROPERTIES COMPILE_DEFINITIONS "FL_EXPORT_LIBRARY")
+        set_target_properties(fl-shared PROPERTIES VERSION 5.0 SOVERSION 5)
+        target_link_libraries(fl-shared ${FL_LIBS})
 
-		add_library(fl-static STATIC ${fl-headers} ${fl-sources})
-		set_target_properties(fl-static PROPERTIES OUTPUT_NAME fuzzylite-static)
-		set_target_properties(fl-static PROPERTIES VERSION 5.0 SOVERSION 5)
-		target_link_libraries(fl-static ${FL_LIBS})
-	else()
-		add_library(fl-obj OBJECT ${fl-headers} ${fl-sources})
-		set_target_properties(fl-obj PROPERTIES COMPILE_FLAGS "-fPIC")
+        add_library(fl-static STATIC ${fl-headers} ${fl-sources})
+        set_target_properties(fl-static PROPERTIES OUTPUT_NAME fuzzylite-static)
+        set_target_properties(fl-static PROPERTIES VERSION 5.0 SOVERSION 5)
+        target_link_libraries(fl-static ${FL_LIBS})
+    else()
+        add_library(fl-obj OBJECT ${fl-headers} ${fl-sources})
+        set_target_properties(fl-obj PROPERTIES COMPILE_FLAGS "-fPIC")
 
-		add_library(fl-shared SHARED $<TARGET_OBJECTS:fl-obj>)
-		set_target_properties(fl-shared PROPERTIES OUTPUT_NAME fuzzylite)
-		set_target_properties(fl-shared PROPERTIES DEBUG_POSTFIX d)
-		set_target_properties(fl-shared PROPERTIES COMPILE_DEFINITIONS "FL_EXPORT_LIBRARY")
-		set_target_properties(fl-shared PROPERTIES VERSION 5.0 SOVERSION 5)
-		target_link_libraries(fl-shared ${FL_LIBS})
+        add_library(fl-shared SHARED $<TARGET_OBJECTS:fl-obj>)
+        set_target_properties(fl-shared PROPERTIES OUTPUT_NAME fuzzylite)
+        set_target_properties(fl-shared PROPERTIES DEBUG_POSTFIX d)
+        set_target_properties(fl-shared PROPERTIES COMPILE_DEFINITIONS "FL_EXPORT_LIBRARY")
+        set_target_properties(fl-shared PROPERTIES VERSION 5.0 SOVERSION 5)
+        target_link_libraries(fl-shared ${FL_LIBS})
 
-		add_library(fl-static STATIC $<TARGET_OBJECTS:fl-obj>)
-		set_target_properties(fl-static PROPERTIES OUTPUT_NAME fuzzylite-static)
-		set_target_properties(fl-static PROPERTIES DEBUG_POSTFIX d)
-		set_target_properties(fl-static PROPERTIES VERSION 5.0 SOVERSION 5)
-		target_link_libraries(fl-static ${FL_LIBS})
-	endif()
+        add_library(fl-static STATIC $<TARGET_OBJECTS:fl-obj>)
+        set_target_properties(fl-static PROPERTIES OUTPUT_NAME fuzzylite-static)
+        set_target_properties(fl-static PROPERTIES DEBUG_POSTFIX d)
+        set_target_properties(fl-static PROPERTIES VERSION 5.0 SOVERSION 5)
+        target_link_libraries(fl-static ${FL_LIBS})
+    endif()
 endif()
 
 add_executable(fl-bin src/main.cpp)
