code for msvc and xcode is the same, remove duplicate

--- a/fuzzylite/CMakeLists.txt
+++ b/fuzzylite/CMakeLists.txt
@@ -105,7 +105,7 @@ message("${exepath}")
 
 set(CMAKE_DEBUG_POSTFIX d)
 
-if (WIN32)
+if (MSVC OR CMAKE_GENERATOR STREQUAL Xcode)
 add_library(fl-shared SHARED ${fl-headers} ${fl-sources})
 set_target_properties(fl-shared PROPERTIES OUTPUT_NAME fuzzylite)
 set_target_properties(fl-shared PROPERTIES COMPILE_DEFINITIONS "FL_EXPORT_LIBRARY")
@@ -116,21 +116,7 @@ add_library(fl-static STATIC ${fl-headers} ${fl-sources})
 set_target_properties(fl-static PROPERTIES OUTPUT_NAME fuzzylite-static)
 set_target_properties(fl-static PROPERTIES VERSION 5.0)
 target_link_libraries(fl-static ${FL_LIBS})
-endif()
-
-if(UNIX)
-    if(CMAKE_GENERATOR STREQUAL Xcode) #Xcode has issues building fuzzylite when using fl-obj
-        add_library(fl-shared SHARED ${fl-headers} ${fl-sources})
-        set_target_properties(fl-shared PROPERTIES OUTPUT_NAME fuzzylite)
-        set_target_properties(fl-shared PROPERTIES COMPILE_DEFINITIONS "FL_EXPORT_LIBRARY")
-        set_target_properties(fl-shared PROPERTIES VERSION 5.0 SOVERSION 5)
-        target_link_libraries(fl-shared ${FL_LIBS})
-
-        add_library(fl-static STATIC ${fl-headers} ${fl-sources})
-        set_target_properties(fl-static PROPERTIES OUTPUT_NAME fuzzylite-static)
-        set_target_properties(fl-static PROPERTIES VERSION 5.0 SOVERSION 5)
-        target_link_libraries(fl-static ${FL_LIBS})
-    else()
+else()
         add_library(fl-obj OBJECT ${fl-headers} ${fl-sources})
         set_target_properties(fl-obj PROPERTIES COMPILE_FLAGS "-fPIC")
 
@@ -146,7 +132,6 @@ if(UNIX)
         set_target_properties(fl-static PROPERTIES DEBUG_POSTFIX d)
         set_target_properties(fl-static PROPERTIES VERSION 5.0 SOVERSION 5)
         target_link_libraries(fl-static ${FL_LIBS})
-    endif()
 endif()
 
 add_executable(fl-bin src/main.cpp)
