add component selection

--- a/fuzzylite/CMakeLists.txt
+++ b/fuzzylite/CMakeLists.txt
@@ -14,6 +14,12 @@ add_definitions(-DFL_DATE="${FL_DATE}")
 
 add_definitions(-DFL_BUILD_PATH="${CMAKE_SOURCE_DIR}") #used to determine FL__FILE__
 
+option(BUILD_SHARED ON)
+option(BUILD_STATIC ON)
+if(BUILD_SHARED)
+    option(BUILD_BINARY ON)
+endif()
+
 option(FL_USE_FLOAT "Use fl::scalar as float" OFF)
 option(FL_BACKTRACE "Provide backtrace information in case of errors" OFF)
 option(FL_CPP11 "Builds utilizing C++11, i.e., passing -std=c++11" OFF)
@@ -106,34 +112,45 @@ message("${exepath}")
 set(CMAKE_DEBUG_POSTFIX d)
 
 if (MSVC OR CMAKE_GENERATOR STREQUAL Xcode)
+if(BUILD_SHARED)
 add_library(fl-shared SHARED ${fl-headers} ${fl-sources})
 set_target_properties(fl-shared PROPERTIES OUTPUT_NAME fuzzylite)
 set_target_properties(fl-shared PROPERTIES COMPILE_DEFINITIONS "FL_EXPORT_LIBRARY")
 set_target_properties(fl-shared PROPERTIES VERSION 5.0)
 target_link_libraries(fl-shared ${FL_LIBS})
+endif()
 
+if(BUILD_SHARED)
 add_library(fl-static STATIC ${fl-headers} ${fl-sources})
 set_target_properties(fl-static PROPERTIES OUTPUT_NAME fuzzylite-static)
 set_target_properties(fl-static PROPERTIES VERSION 5.0)
 target_link_libraries(fl-static ${FL_LIBS})
+endif(BUILD_SHARED)
 else()
+        if(BUILD_SHARED OR BUILD_STATIC)
         add_library(fl-obj OBJECT ${fl-headers} ${fl-sources})
         set_target_properties(fl-obj PROPERTIES COMPILE_FLAGS "-fPIC")
+        endif()
 
+        if(BUILD_SHARED)
         add_library(fl-shared SHARED $<TARGET_OBJECTS:fl-obj>)
         set_target_properties(fl-shared PROPERTIES OUTPUT_NAME fuzzylite)
         set_target_properties(fl-shared PROPERTIES DEBUG_POSTFIX d)
         set_target_properties(fl-shared PROPERTIES COMPILE_DEFINITIONS "FL_EXPORT_LIBRARY")
         set_target_properties(fl-shared PROPERTIES VERSION 5.0 SOVERSION 5)
         target_link_libraries(fl-shared ${FL_LIBS})
+        endif(BUILD_SHARED)
 
+        if(BUILD_STATIC)
         add_library(fl-static STATIC $<TARGET_OBJECTS:fl-obj>)
         set_target_properties(fl-static PROPERTIES OUTPUT_NAME fuzzylite-static)
         set_target_properties(fl-static PROPERTIES DEBUG_POSTFIX d)
         set_target_properties(fl-static PROPERTIES VERSION 5.0 SOVERSION 5)
         target_link_libraries(fl-static ${FL_LIBS})
+        endif(BUILD_STATIC)
 endif()
 
+if(BUILD_BINARY)
 add_executable(fl-bin src/main.cpp)
 set_target_properties(fl-bin PROPERTIES OUTPUT_NAME fuzzylite)
 set_target_properties(fl-bin PROPERTIES OUTPUT_NAME fuzzylite IMPORT_PREFIX tmp-) #To prevent LNK1149 in Windows
@@ -145,6 +162,7 @@ set_target_properties(fl-bin PROPERTIES DEBUG_POSTFIX d)
     set_target_properties(fl-bin PROPERTIES COMPILE_DEFINITIONS "FL_IMPORT_LIBRARY")
     target_link_libraries(fl-bin fl-shared ${FL_LIBS})
 #endif()
+endif(BUILD_BINARY)
 
 if(NOT CMAKE_INSTALL_LIBDIR)
     set(CMAKE_INSTALL_LIBDIR lib)
