--- a/fuzzylite/CMakeLists.txt
+++ b/fuzzylite/CMakeLists.txt
@@ -163,16 +163,34 @@ set_target_properties(fl-bin PROPERTIES DEBUG_POSTFIX d)
 #endif()
 endif(BUILD_BINARY)
 
+###INSTALL SECTION
 if(NOT CMAKE_INSTALL_LIBDIR)
     set(CMAKE_INSTALL_LIBDIR lib)
 endif()
 
+if(BUILD_BINARY)
+	install(TARGETS fl-bin 
+			RUNTIME DESTINATION bin
+			LIBRARY DESTINATION  ${CMAKE_INSTALL_LIBDIR}
+			ARCHIVE DESTINATION  ${CMAKE_INSTALL_LIBDIR}
+	)
+endif()
 
-install(TARGETS fl-bin fl-shared fl-static
-        RUNTIME DESTINATION bin
-        LIBRARY DESTINATION  ${CMAKE_INSTALL_LIBDIR}
-        ARCHIVE DESTINATION  ${CMAKE_INSTALL_LIBDIR}
-        )
+if(BUILD_SHARED)
+	install(TARGETS fl-shared 
+			RUNTIME DESTINATION bin
+			LIBRARY DESTINATION  ${CMAKE_INSTALL_LIBDIR}
+			ARCHIVE DESTINATION  ${CMAKE_INSTALL_LIBDIR}
+	)
+endif()
+
+if(BUILD_STATIC)
+	install(TARGETS fl-static
+			RUNTIME DESTINATION bin
+			LIBRARY DESTINATION  ${CMAKE_INSTALL_LIBDIR}
+			ARCHIVE DESTINATION  ${CMAKE_INSTALL_LIBDIR}
+	)
+endif()
 
 install(DIRECTORY fl/ DESTINATION include/fl)
 
