disable -fPIC on MinGW

--- a/fuzzylite/CMakeLists.txt
+++ b/fuzzylite/CMakeLists.txt
@@ -118,7 +118,9 @@ if (MSVC OR CMAKE_GENERATOR STREQUAL Xcode)
 else()
     if(BUILD_SHARED OR BUILD_STATIC)
         add_library(fl-obj OBJECT ${fl-headers} ${fl-sources})
-        set_target_properties(fl-obj PROPERTIES COMPILE_FLAGS "-fPIC")
+        if(NOT MINGW)
+            set_target_properties(fl-obj PROPERTIES COMPILE_FLAGS "-fPIC")
+        endif()
     endif()
 
     if(BUILD_SHARED)
